# VHSpp

./: .gitignore  CMakeLists.txt  LOGBOOK.md
build2/tools/efm-decoder/tools/efm-decoder-audio/: efm-decoder-audio
build2/tools/efm-decoder/tools/efm-decoder-d24/: efm-decoder-d24
build2/tools/efm-decoder/tools/efm-decoder-data/: efm-decoder-data
build2/tools/efm-decoder/tools/efm-decoder-f2/: efm-decoder-f2
build2/tools/efm-decoder/tools/efm-stacker-f2/: efm-stacker-f2
build2/tools/efm-decoder/tools/vfs-verifier/: vfs-verifier
build2/tools/ld-analyse/: ld-analyse  qrc_ld-analyse-resources.cpp
build2/tools/ld-chroma-decoder/: ld-chroma-decoder
build2/tools/ld-chroma-decoder/encoder/: ld-chroma-encoder
build2/tools/ld-disc-stacker/: ld-disc-stacker
build2/tools/ld-discmap/: ld-discmap
build2/tools/ld-dropout-correct/: ld-dropout-correct
build2/tools/ld-export-metadata/: ld-export-metadata
build2/tools/ld-ldf-reader/: ld-ldf-reader
build2/tools/ld-lds-converter/: ld-lds-converter
build2/tools/ld-process-ac3/decode/: ld-ac3-decode
build2/tools/ld-process-ac3/demodulate/: ld-ac3-demodulate
build2/tools/ld-process-efm/: ld-process-efm
build2/tools/ld-process-vbi/: ld-process-vbi
build2/tools/ld-process-vits/: ld-process-vits
build_nativeopt/cpp_port/: vhsdecode_decode
build_port/cpp_port/: vhsdecode_decode  vhsdecode_k1_file_stream  vhsdecode_k1_parity  vhsdecode_k2_first_hsync_parity  vhsdecode_k2_get_pulses_parity  vhsdecode_k2_hsync_refine_parity  vhsdecode_k2_pulse_parity  vhsdecode_k2_refine_parity  vhsdecode_k2_sync_parity  vhsdecode_k2_vsync_parity  vhsdecode_k3_phase_parity  vhsdecode_k3_process_parity  vhsdecode_k4_downscale_parity  vhsdecode_k4_field_parity  vhsdecode_k5_metadata_parity  vhsdecode_k5_write_json_parity  vhsdecode_k6_session_parity  vhsdecode_k7_control_parity  vhsdecode_k7_live_control_parity  vhsdecode_k8_session_loop_parity  vhsdecode_ntsc_vhs_decode  vhsdecode_ntsc_vhs_hotpath
cpp_port/: CMakeLists.txt
cpp_port/include/vhsdecode_cpp/: chroma_afc.h  chroma_phase.h  chroma_process.h  decode_driver.h  demod_block.h  demod_cache.h  downscale_core.h  fftw_guard.h  hardware_info.h  k1_context.h  metadata_core.h  output_core.h  readfield_control_core.h  resync_core.h  resync_runtime.h  resync_state.h  session_core.h  session_loop_core.h  sync_core.h  vsync_serration.h
cpp_port/src/: chroma_afc.cpp  chroma_phase.cpp  chroma_process.cpp  demod_block.cpp  demod_cache.cpp  downscale_core.cpp  hardware_info.cpp  k1_context.cpp  k1_file_stream_bench.cpp  k1_parity_main.cpp  k2_first_hsync_parity_main.cpp  k2_get_pulses_parity_main.cpp  k2_hsync_refine_parity_main.cpp  k2_pulse_parity_main.cpp  k2_refine_parity_main.cpp  k2_sync_parity_main.cpp  k2_vsync_parity_main.cpp  k3_phase_parity_main.cpp  k3_process_parity_main.cpp  k4_downscale_parity_main.cpp  k4_field_parity_main.cpp  k5_metadata_parity_main.cpp  k5_write_json_parity_main.cpp  k6_session_parity_main.cpp  k7_control_parity_main.cpp  k7_live_control_parity_main.cpp  k8_session_loop_parity_main.cpp  metadata_core.cpp  ntsc_vhs_decode_main.cpp  ntsc_vhs_hotpath_bench.cpp  output_core.cpp  readfield_control_core.cpp  resync_core.cpp  resync_runtime.cpp  resync_state.cpp  session_core.cpp  session_loop_core.cpp  sync_core.cpp  vsync_serration.cpp
cpp_port/tools/: compare_k1_outputs.py  compare_k2_first_lineloc.py  compare_k2_get_pulses.py  compare_k2_hsync_refine.py  compare_k2_outputs.py  compare_k2_pulses.py  compare_k2_refine.py  compare_k2_vsync.py  compare_k3_phase.py  compare_k3_process.py  compare_k4_downscale.py  compare_k4_field.py  compare_k5_metadata.py  compare_k5_write_json.py  compare_k6_session.py  compare_k7_control.py  compare_k7_live_control.py  compare_k8_session_loop.py  dump_k1_python.py  dump_k2_get_pulses_python.py  dump_k2_live_fixture.py  dump_k2_metadata_hit.py  dump_k2_pulse_python.py  dump_k2_python.py  dump_k2_refine_python.py  dump_k2_vsync_python.py  dump_k3_phase_python.py  dump_k3_process_python.py  dump_k4_downscale_python.py  dump_k4_field_python.py  dump_k5_metadata_python.py  dump_k5_write_json_python.py  dump_k6_session_python.py  dump_k7_control_python.py  dump_k7_live_python.py  dump_k8_session_loop_python.py  dump_live_rawdecode_window_python.py  dump_live_written_field_python.py  run_k2_first_lineloc_fuzz.py  run_k2_hsync_refine_fuzz.py  (+3 more)
src/: main.cpp
src/format/: video_format.cpp  video_format.h
src/io/: raw_reader.cpp  raw_reader.h  tbc_pwriter.cpp  tbc_pwriter.h  tbc_writer.cpp  tbc_writer.h
src/pipeline/: async_orchestrator.cpp  async_orchestrator.h  chroma_decode.cpp  chroma_decode.h  chunk_worker.cpp  chunk_worker.h  dropout_detect.cpp  dropout_detect.h  fm_demod.cpp  fm_demod.h  hsync_refine.cpp  hsync_refine.h  line_locs.cpp  line_locs.h  lineloc_coherence.cpp  lineloc_coherence.h  pipeline.cpp  pipeline.h  sync_pulses.cpp  sync_pulses.h  tbc_resample.cpp  tbc_resample.h
src/util/: cache_info.cpp  cache_info.h
tools/efm-decoder/tools/efm-decoder-data/src/writers/: writer_sector.cpp
